Readme update + main.js

--- a/Source/output/slides.html
+++ b/Source/output/slides.html
@@ -3,11 +3,10 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
       <title>The Slides Document Type</title>
       <link rel="stylesheet" href="css/base.css" type="text/css"/>
-      <script type="text/javascript" src="js/respond.min.js"></script>
-      <script type="text/javascript" src="js/mt-core.js"></script>
-      <script type="text/javascript" src="js/mt-more.js"></script>
-      <script type="text/javascript" src="js/jstorage.js"></script>
-      <script type="text/javascript" src="js/main.js"></script>
+      <script type="text/javascript" src="js/respond.min.js"> </script>
+      <script type="text/javascript" src="js/mt-core.js"> </script>
+      <script type="text/javascript" src="js/mt-more.js"> </script>
+      <script type="text/javascript" src="js/main.js"> </script>
    </head>
    <body>
       <div id="d0e4" class="titlepage">
@@ -64,62 +63,6 @@ details.</div>
             <h1 class="title">What Are Slides?</h1>
             <div class="itemizedlist">
                <ul class="itemizedlist">
-                  <li class="listitem">
-                     <div class="outer_paragraph">An XML presentation tool
-</div>
-                  </li>
-                  <li class="listitem">
-                     <div class="outer_paragraph">Suitable for HTML or PDF presentations
-</div>
-                  </li>
-                  <li class="listitem">
-                     <div class="outer_paragraph">Supported by Open Source software
-</div>
-                  </li>
-               </ul>
-			<ul class="itemizedlist">
-                  <li class="listitem">
-                     <div class="outer_paragraph">An XML presentation tool
-</div>
-                  </li>
-                  <li class="listitem">
-                     <div class="outer_paragraph">Suitable for HTML or PDF presentations
-</div>
-                  </li>
-                  <li class="listitem">
-                     <div class="outer_paragraph">Supported by Open Source software
-</div>
-                  </li>
-               </ul>
-			<ul class="itemizedlist">
-                  <li class="listitem">
-                     <div class="outer_paragraph">An XML presentation tool
-</div>
-                  </li>
-                  <li class="listitem">
-                     <div class="outer_paragraph">Suitable for HTML or PDF presentations
-</div>
-                  </li>
-                  <li class="listitem">
-                     <div class="outer_paragraph">Supported by Open Source software
-</div>
-                  </li>
-               </ul>
-			<ul class="itemizedlist">
-                  <li class="listitem">
-                     <div class="outer_paragraph">An XML presentation tool
-</div>
-                  </li>
-                  <li class="listitem">
-                     <div class="outer_paragraph">Suitable for HTML or PDF presentations
-</div>
-                  </li>
-                  <li class="listitem">
-                     <div class="outer_paragraph">Supported by Open Source software
-</div>
-                  </li>
-               </ul>
-			<ul class="itemizedlist">
                   <li class="listitem">
                      <div class="outer_paragraph">An XML presentation tool
 </div>
@@ -401,18 +344,6 @@ Objects that can subsequently be turned into PDF.</div>
             <div class="outer_paragraph">For HTML display, most of the actual
 <span class="quote">“<span class="quote">look-and-feel</span>”</span> of the presentation is controlled by the CSS
 stylesheet(s) used.</div>
-			<div class="outer_paragraph">For HTML display, most of the actual
-<span class="quote">“<span class="quote">look-and-feel</span>”</span> of the presentation is controlled by the CSS
-stylesheet(s) used.</div>
-			<div class="outer_paragraph">For HTML display, most of the actual
-<span class="quote">“<span class="quote">look-and-feel</span>”</span> of the presentation is controlled by the CSS
-stylesheet(s) used.</div>
-			<div class="outer_paragraph">For HTML display, most of the actual
-<span class="quote">“<span class="quote">look-and-feel</span>”</span> of the presentation is controlled by the CSS
-stylesheet(s) used.</div>
-			<div class="outer_paragraph">For HTML display, most of the actual
-<span class="quote">“<span class="quote">look-and-feel</span>”</span> of the presentation is controlled by the CSS
-stylesheet(s) used.</div>
          </div>
       </div>
       <div class="foil" id="d0e244">
@@ -477,7 +408,7 @@ your slides.
             <div class="outer_paragraph">Any questions?</div>
          </div>
       </div>
-      <div>
+      <div class="logotypes">
          <img src="images/inovace-logo.png" alt="Tento projekt je spolufinancován Evropským sociálním fondem a státním rozpočtem ČR." width="600" height="171"/>
       </div>
    </body>
