DocbookPresentation.isApplicableHere fix in main.js

--- a/Source/output-development/bc4.html
+++ b/Source/output-development/bc4.html
@@ -6,7 +6,7 @@
       <meta name="description" content="teTeX je jednou z nejrozšířenějších distribucí TeXu a přidružených programů. Některé jeho součásti jsou poměrně výpočetně náročné (např. generování vzorů pro dělení slov). Cílem tohoto projektu je analyzovat možnosti optimalizace těchto programů a tyto poznatky prakticky ověřit. Z teTeXu byly pro tyto účely vybrány programy PatGen, TeX, eTeX, pdfTeX, pdfeTeX, Omega a dvipdfm. Hlavním zájmem bylo optimalizovat programy pro generování vzorů. Kromě programu PatGen byl analyzován také program OPatGen."/>
       <meta name="keywords" content="TeX, teTeX, Optimalizace, Generování vzorů, PatGen, OPatGen, UPatGen"/>
       <link rel="stylesheet" href="css/base.css" type="text/css"/>
-      <script type="text/javascript" src="js/respond.min.js"> </script>
+      <script type="text/javascript" src="js/modernizr.js"> </script>
       <script type="text/javascript" src="js/mt-core.js"> </script>
       <script type="text/javascript" src="js/mt-more.js"> </script>
       <script type="text/javascript" src="js/main.js"> </script>
