--- a/Source/output-development/slides.html
+++ b/Source/output-development/slides.html
@@ -3,7 +3,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <title>The Slides Document Type</title>
   <link rel="stylesheet" href="css/base.css" type="text/css"/>
-  <script type="text/javascript" src="js/modernizr.js"> </script>
+  <!--<script type="text/javascript" src="js/modernizr.js"> </script>-->
   <script type="text/javascript" src="js/mt-core.js"> </script>
   <script type="text/javascript" src="js/mt-more.js"> </script>
   <script type="text/javascript" src="js/main.js"> </script>
